sprint_6_review